# messenger

./: README.md  links
app/clientlib/: Cargo.toml
app/clientlib/src/: lib.rs  receive.rs  send.rs
app/serverlib/: Cargo.toml
app/serverlib/src/: lib.rs
app/testlib/: Cargo.toml
app/testlib/src/: lib.rs
logbook/: a.aux  a.tex
report/: a.aux  a.tex  a.toc
