[package]
name = "clientlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.9.0", features = ["stream", "alloc"] }
anyhow = "1.0"
rand = "0.8"
rsa = "0.7.0"
sha2 = "0.10.6"
signature = "1.6.4"
bimap = "0.6.2"
