[package]
name = "testlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bimap = "0.6.2"
clientlib = { path = "../clientlib/" }
rand = "0.8.5"
rsa = "0.7.1"
serverlib = { path = "../serverlib/" }
